2004-12-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/comctl32.def (ImageList_Copy, ImageList_DrawIndirect,
	ImageList_Duplicate): Add stubs.

2004-12-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/directx/strmiids.c (MEDIASUBTYPE_YV12): Correct GUID.
	Thanks to "Pete" <pross@xvid.org>

2004-11-21 Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/wingdi.h (AC_SRC_ALPHA, AC_SRC_NO_ALPHA, 
	AC_DST_NO_ALPHA, ...): Add defines.
	* include/winuser.h (ULW_COLORKEY,ULW_ALPHA,
	ULW_OPAQUE): Add defines.	

2004-11-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (VerSetConditionMask): Correct typo in _WIN32_WINNT
	guard.
	* lib/kernel32.def (VerSetConditionMask): Correct stdcall
	suffix.
	* lib/ddk/ntoskrnl.def (VerSetConditionMask): Likewise.

2004-11-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (PPROCESS_INFORMATION): Add typedef.
	(CreateProcessWithLogonW): Declare.
	(LOGON_WITH_PROFILE, LOGON_NETCREDENTIALS_ONLY): Add defines.
	Thanks to: "jkmaki"  <jkmaki@users.sourceforge.net>

2004-11-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sspi.h (SecPkgContext_Sizes): Fix typo.
	Thanks to: David Leonard  <leonard@users.sourceforge.net>

2004-11-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sspi.h (SecPkgCredentials_Names[AW]): Correct name.
	Thanks to: David Leonard  <leonard@users.sourceforge.net>

2004-11-19  Magnus Olsen  <greatlord@users.sourceforge.net>

	* include/winuser.h (MSLLHOOKSTRUCT): Add structure.

2004-11-19  Magnus Olsen  <greatlord@users.sourceforge.net>

	* include/winuser.h (LLKHF_EXTENDED, LLKHF_INJECTED, LLKHF_UP):
	Add defines.
	(LLKHF_ALTDOWN): Define based on KF_ALTDOWN,
             
2004-11-19  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/shellapi.h (NIF_GUID): Add another define.

2004-11-18  Earnie Boyd  <earnie@users.sf.net>

	* include/wincon.h (AttachConsole): Correct the _WIN32_WINNT filter.